--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+spring.datasource.url=jdbc:mysql://localhost:3306/book_library_api?useSSL=false
+spring.datasource.username=clroot
+spring.datasource.password=coderslab
